# actix-bb8-tiberius

./: Cargo.toml
config/: development.toml
src/: deadpool_tiberius.rs  main.rs
