[package]
name = "actix-bb8-tiberius"
version = "1.0.0"
authors = ["Benjamin Weber <one@bwe.im>"]
edition = "2018"

[dependencies]
actix-web = "3"
async-std = {version = "*", features = ["attributes"]}
futures = "*"
env_logger = "0.8"
bb8 = "*"
bb8-tiberius = "*"
tiberius = "*"
anyhow = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
config = "*"
deadpool = "*"
async-trait = "0.1.17"
